03_code2/grade.txt
Grading at Tue Jul 24 08:15:11 UTC 2018
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:27:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int main(void) {
 ^
temp.c:27:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main(void) {
     ^
temp.c: In function ‘main’:
temp.c:40:3: error: expected ‘;’ before ‘return’
   return 0;
   ^
temp.c: In function ‘printTriangle’:
temp.c:41:1: error: expected declaration or statement at end of input
 }
 ^
temp.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
